# CVLModules

./: README.md
src/main/cpp/: CMakeLists.txt  Utils.cmake
src/main/cpp/writerretrieval_plugin/: CMakeLists.txt  MyWriterRetrieval.cpp  testApp.cpp
src/main/java/eu/transkribus/interfaces/native_wrapper/: NativeLayoutAnalysisProxy.java
